--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,8 @@
     "api": "apps/api",
     "api-interfaces": "libs/api-interfaces",
     "calculator-app": "apps/calculator-app",
-    "calculator-app-e2e": "apps/calculator-app-e2e"
+    "calculator-app-e2e": "apps/calculator-app-e2e",
+    "shopify-ends-app": "apps/shopify-ends-app",
+    "shopify-ends-app-e2e": "apps/shopify-ends-app-e2e"
   }
 }
