--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nrwl/angular": "13.7.3",
+    "core-js": "^3.6.5",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "0.13.7",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -45,19 +49,31 @@
     "@nrwl/linter": "13.7.3",
     "@nrwl/nest": "13.7.3",
     "@nrwl/node": "13.7.3",
+    "@nrwl/react": "13.8.0",
     "@nrwl/tao": "13.7.3",
+    "@nrwl/web": "13.8.0",
     "@nrwl/workspace": "13.7.3",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
+    "@types/react": "17.0.30",
+    "@types/react-dom": "17.0.9",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
     "@typescript-eslint/parser": "~5.10.0",
+    "babel-jest": "27.2.3",
     "cypress": "^9.1.0",
     "eslint": "~8.7.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.27.0",
+    "eslint-plugin-react-hooks": "4.3.0",
     "jest": "27.2.3",
     "jest-preset-angular": "11.0.0",
     "prettier": "^2.5.1",
+    "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
   }
