--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@nrwl/jest": "13.7.3",
     "@nrwl/linter": "13.7.3",
     "@nrwl/nest": "13.7.3",
-    "@nrwl/node": "13.7.3",
+    "@nrwl/node": "^13.7.3",
     "@nrwl/react": "13.8.0",
     "@nrwl/tao": "13.7.3",
     "@nrwl/web": "13.8.0",
