--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.0",
     "@nrwl/angular": "13.7.3",
     "core-js": "^3.6.5",
     "react": "17.0.2",
@@ -30,6 +31,7 @@
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "~7.4.0",
+    "swagger-ui-express": "^4.3.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
