--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@ends/api-interfaces": ["libs/api-interfaces/src/index.ts"]
+      "@ends/api-interfaces": ["libs/api-interfaces/src/index.ts"],
+      "@ends/data/sanity": ["libs/data/sanity/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
