--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.0",
     "@nrwl/angular": "13.7.3",
+    "@sanity/client": "^3.1.0",
     "core-js": "^3.6.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
