--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,8 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "strictPropertyInitialization":false,
     "rootDir": ".",
     "sourceMap": true,
