--- a/endsdata/package.json
+++ b/endsdata/package.json
@@ -2,7 +2,7 @@
   "name": "endsdata",
   "private": true,
   "version": "1.0.0",
-  "description": "",
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.0.3",
   "main": "package.json",
   "author": "Kate Sky <kateskytech@gmail.com>",
   "license": "UNLICENSED",
@@ -14,13 +14,13 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.27.2",
-    "@sanity/core": "^2.27.0",
-    "@sanity/default-layout": "^2.27.2",
-    "@sanity/default-login": "^2.27.0",
-    "@sanity/desk-tool": "^2.27.3",
+    "@sanity/base": "^2.29.2",
+    "@sanity/core": "^2.28.1",
+    "@sanity/default-layout": "^2.29.2",
+    "@sanity/default-login": "^2.29.2",
+    "@sanity/desk-tool": "^2.29.2",
     "@sanity/eslint-config-studio": "^2.0.0",
-    "@sanity/vision": "^2.27.2",
+    "@sanity/vision": "^2.29.2",
     "eslint": "^8.6.0",
     "prop-types": "^15.7",
     "react": "^17.0",
@@ -28,9 +28,5 @@
     "react-dom": "^17.0",
     "styled-components": "^5.2.0"
   },
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/katesky/ends.git"
-  }
+  "devDependencies": {}
 }
