--- a/libs/data/sanity/project.json
+++ b/libs/data/sanity/project.json
@@ -5,14 +5,20 @@
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["libs/data/sanity/**/*.ts"]
+        "lintFilePatterns": [
+          "libs/data/sanity/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/data/sanity"],
+      "outputs": [
+        "coverage/libs/data/sanity"
+      ],
       "options": {
         "jestConfig": "libs/data/sanity/jest.config.js",
         "passWithNoTests": true
