--- a/apps/calculator-app-e2e/project.json
+++ b/apps/calculator-app-e2e/project.json
@@ -17,12 +17,18 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/calculator-app-e2e/**/*.{js,ts}"]
+        "lintFilePatterns": [
+          "apps/calculator-app-e2e/**/*.{js,ts}"
+        ]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": ["calculator-app"]
+  "implicitDependencies": [
+    "calculator-app"
+  ]
 }
