--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
-    "@nestjs/common": "^8.4.0",
-    "@nestjs/core": "^8.4.0",
-    "@nestjs/platform-express": "^8.4.0",
-    "@nestjs/swagger": "^5.2.0",
-    "@nrwl/angular": "13.7.3",
+    "@angular/animations": "15.0.2",
+    "@angular/common": "15.0.2",
+    "@angular/compiler": "15.0.2",
+    "@angular/core": "15.0.2",
+    "@angular/forms": "15.0.2",
+    "@angular/material": "15.0.1",
+    "@angular/platform-browser": "15.0.2",
+    "@angular/platform-browser-dynamic": "15.0.2",
+    "@angular/router": "15.0.2",
+    "@nestjs/common": "9.2.1",
+    "@nestjs/core": "9.2.1",
+    "@nestjs/platform-express": "9.2.1",
+    "@nestjs/swagger": "6.1.4",
+    "@nrwl/angular": "15.3.0",
     "@sanity/client": "^3.1.0",
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "~7.4.0",
@@ -41,48 +41,50 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.0",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.2.0",
-    "@angular/compiler-cli": "~13.2.0",
-    "@angular/language-service": "~13.2.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@nrwl/cli": "13.7.3",
-    "@nrwl/cypress": "13.7.3",
-    "@nrwl/eslint-plugin-nx": "13.7.3",
-    "@nrwl/jest": "13.7.3",
-    "@nrwl/linter": "13.7.3",
-    "@nrwl/nest": "13.7.3",
-    "@nrwl/node": "^13.7.3",
-    "@nrwl/react": "13.8.0",
-    "@nrwl/tao": "13.7.3",
-    "@nrwl/web": "13.8.0",
-    "@nrwl/workspace": "13.7.3",
-    "@testing-library/react": "12.1.2",
+    "@angular-devkit/build-angular": "15.0.2",
+    "@angular-eslint/eslint-plugin": "15.0.0",
+    "@angular-eslint/eslint-plugin-template": "15.0.0",
+    "@angular-eslint/template-parser": "15.0.0",
+    "@angular/cli": "13.3.10",
+    "@angular/compiler-cli": "15.0.2",
+    "@angular/language-service": "15.0.2",
+    "@nestjs/schematics": "9.0.3",
+    "@nestjs/testing": "9.2.1",
+    "@nrwl/cli": "15.3.0",
+    "@nrwl/cypress": "15.3.0",
+    "@nrwl/eslint-plugin-nx": "15.3.0",
+    "@nrwl/jest": "15.3.0",
+    "@nrwl/linter": "15.3.0",
+    "@nrwl/nest": "15.3.0",
+    "@nrwl/node": "15.3.0",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/react": "15.3.0",
+    "@nrwl/tao": "15.3.0",
+    "@nrwl/web": "15.3.0",
+    "@nrwl/workspace": "15.3.0",
+    "@testing-library/react": "13.4.0",
     "@testing-library/react-hooks": "7.0.2",
-    "@types/jest": "27.0.2",
-    "@types/node": "16.11.7",
-    "@types/react": "17.0.30",
-    "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "~5.10.0",
-    "@typescript-eslint/parser": "~5.10.0",
-    "babel-jest": "27.2.3",
+    "@types/jest": "28.1.8",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "@typescript-eslint/eslint-plugin": "5.45.1",
+    "@typescript-eslint/parser": "5.45.1",
+    "babel-jest": "28.1.3",
     "cypress": "^9.1.0",
-    "eslint": "~8.7.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.27.0",
-    "eslint-plugin-react-hooks": "4.3.0",
-    "jest": "27.2.3",
-    "jest-preset-angular": "11.0.0",
-    "prettier": "^2.5.1",
-    "react-test-renderer": "17.0.2",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.5.2"
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "28.1.3",
+    "jest-preset-angular": "12.2.3",
+    "prettier": "2.8.1",
+    "react-test-renderer": "18.2.0",
+    "ts-jest": "28.0.8",
+    "typescript": "4.8.4"
   }
 }
+
