--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@nrwl/eslint-plugin-nx": "15.3.0",
     "@nrwl/jest": "15.3.0",
     "@nrwl/linter": "15.3.0",
-    "@nrwl/nest": "15.3.0",
+    "@nrwl/nest": "^15.3.0",
     "@nrwl/node": "15.3.0",
     "@nrwl/nx-cloud": "15.0.2",
     "@nrwl/react": "15.3.0",
@@ -87,4 +87,3 @@
     "typescript": "4.8.4"
   }
 }
-
